// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic > Hello, world! 1`] = `
{
  "encodedData": [
    1,
    0,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    0,
    1,
    0,
    1,
    0,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
  ],
  "encodingTable": {
    " ": [
      1,
      0,
      1,
      0,
    ],
    "!": [
      0,
      0,
      0,
    ],
    ",": [
      0,
      0,
      1,
    ],
    "H": [
      1,
      0,
      0,
      0,
    ],
    "d": [
      1,
      1,
      1,
      1,
    ],
    "e": [
      1,
      0,
      0,
      1,
    ],
    "l": [
      0,
      1,
    ],
    "o": [
      1,
      1,
      0,
    ],
    "r": [
      1,
      1,
      1,
      0,
    ],
    "w": [
      1,
      0,
      1,
      1,
    ],
  },
  "tree": {
    "left": {
      "left": {
        "left": {
          "value": "!",
        },
        "right": {
          "value": ",",
        },
      },
      "right": {
        "value": "l",
      },
    },
    "right": {
      "left": {
        "left": {
          "left": {
            "value": "H",
          },
          "right": {
            "value": "e",
          },
        },
        "right": {
          "left": {
            "value": " ",
          },
          "right": {
            "value": "w",
          },
        },
      },
      "right": {
        "left": {
          "value": "o",
        },
        "right": {
          "left": {
            "value": "r",
          },
          "right": {
            "value": "d",
          },
        },
      },
    },
  },
}
`;

exports[`basic > Hello, world! 2`] = `
Uint8Array [
  2,
  137,
  92,
  106,
  247,
  62,
  0,
]
`;

exports[`basic > Hello, world!1 1`] = `
{
  "encodedData": [
    1,
    0,
    0,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    0,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    0,
    1,
    0,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    0,
    1,
    0,
    0,
    0,
  ],
  "encodingTable": {
    " ": [
      0,
      1,
      0,
    ],
    "!": [
      1,
      0,
      1,
      0,
    ],
    ",": [
      1,
      1,
      1,
      1,
    ],
    "1": [
      1,
      0,
      0,
      0,
    ],
    "H": [
      1,
      0,
      0,
      1,
    ],
    "d": [
      1,
      0,
      1,
      1,
    ],
    "e": [
      1,
      1,
      1,
      0,
    ],
    "l": [
      0,
      0,
    ],
    "o": [
      0,
      1,
      1,
    ],
    "r": [
      1,
      1,
      0,
      1,
    ],
    "w": [
      1,
      1,
      0,
      0,
    ],
  },
  "tree": {
    "left": {
      "left": {
        "value": "l",
      },
      "right": {
        "left": {
          "value": " ",
        },
        "right": {
          "value": "o",
        },
      },
    },
    "right": {
      "left": {
        "left": {
          "left": {
            "value": "1",
          },
          "right": {
            "value": "H",
          },
        },
        "right": {
          "left": {
            "value": "!",
          },
          "right": {
            "value": "d",
          },
        },
      },
      "right": {
        "left": {
          "left": {
            "value": "w",
          },
          "right": {
            "value": "r",
          },
        },
        "right": {
          "left": {
            "value": "e",
          },
          "right": {
            "value": ",",
          },
        },
      },
    },
  },
}
`;

exports[`basic > Hello, world!1 2`] = `
Uint8Array [
  7,
  158,
  7,
  235,
  30,
  151,
  40,
]
`;

exports[`basic > Hello, world!11 1`] = `
{
  "encodedData": [
    1,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    1,
    0,
    1,
    1,
    0,
    1,
    0,
    0,
    1,
    0,
  ],
  "encodingTable": {
    " ": [
      1,
      1,
      1,
      1,
    ],
    "!": [
      1,
      0,
      1,
      1,
    ],
    ",": [
      1,
      1,
      1,
      0,
    ],
    "1": [
      0,
      1,
      0,
    ],
    "H": [
      1,
      1,
      0,
      0,
    ],
    "d": [
      1,
      0,
      0,
      0,
    ],
    "e": [
      1,
      0,
      0,
      1,
    ],
    "l": [
      0,
      0,
    ],
    "o": [
      0,
      1,
      1,
    ],
    "r": [
      1,
      0,
      1,
      0,
    ],
    "w": [
      1,
      1,
      0,
      1,
    ],
  },
  "tree": {
    "left": {
      "left": {
        "value": "l",
      },
      "right": {
        "left": {
          "value": "1",
        },
        "right": {
          "value": "o",
        },
      },
    },
    "right": {
      "left": {
        "left": {
          "left": {
            "value": "d",
          },
          "right": {
            "value": "e",
          },
        },
        "right": {
          "left": {
            "value": "r",
          },
          "right": {
            "value": "!",
          },
        },
      },
      "right": {
        "left": {
          "left": {
            "value": "H",
          },
          "right": {
            "value": "w",
          },
        },
        "right": {
          "left": {
            "value": ",",
          },
          "right": {
            "value": " ",
          },
        },
      },
    },
  },
}
`;

exports[`basic > Hello, world!11 2`] = `
Uint8Array [
  2,
  201,
  7,
  223,
  174,
  136,
  180,
  2,
]
`;

exports[`basic > Hello, world!111 1`] = `
{
  "encodedData": [
    1,
    0,
    0,
    0,
    1,
    1,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    1,
    0,
    1,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    0,
    1,
    0,
    1,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
  ],
  "encodingTable": {
    " ": [
      1,
      0,
      1,
      1,
    ],
    "!": [
      0,
      1,
      1,
      1,
    ],
    ",": [
      1,
      0,
      1,
      0,
    ],
    "1": [
      1,
      1,
      1,
    ],
    "H": [
      1,
      0,
      0,
      0,
    ],
    "d": [
      1,
      1,
      0,
      0,
    ],
    "e": [
      1,
      1,
      0,
      1,
    ],
    "l": [
      0,
      0,
    ],
    "o": [
      0,
      1,
      0,
    ],
    "r": [
      0,
      1,
      1,
      0,
    ],
    "w": [
      1,
      0,
      0,
      1,
    ],
  },
  "tree": {
    "left": {
      "left": {
        "value": "l",
      },
      "right": {
        "left": {
          "value": "o",
        },
        "right": {
          "left": {
            "value": "r",
          },
          "right": {
            "value": "!",
          },
        },
      },
    },
    "right": {
      "left": {
        "left": {
          "left": {
            "value": "H",
          },
          "right": {
            "value": "w",
          },
        },
        "right": {
          "left": {
            "value": ",",
          },
          "right": {
            "value": " ",
          },
        },
      },
      "right": {
        "left": {
          "left": {
            "value": "d",
          },
          "right": {
            "value": "e",
          },
        },
        "right": {
          "value": "1",
        },
      },
    },
  },
}
`;

exports[`basic > Hello, world!111 2`] = `
Uint8Array [
  5,
  141,
  5,
  87,
  41,
  140,
  127,
  31,
]
`;

exports[`basic > empty 1`] = `
{
  "encodedData": [],
  "encodingTable": {},
  "tree": {},
}
`;

exports[`basic > empty 2`] = `
Uint8Array [
  0,
]
`;

exports[`basic > 中文 1`] = `
{
  "encodedData": [
    0,
    1,
  ],
  "encodingTable": {
    "中": [
      0,
    ],
    "文": [
      1,
    ],
  },
  "tree": {
    "left": {
      "value": "中",
    },
    "right": {
      "value": "文",
    },
  },
}
`;

exports[`basic > 中文 2`] = `
Uint8Array [
  2,
  1,
]
`;
